unpackaged/main/default/objects/Episode_Team__c/Episode_Team__c.object-meta.xml
<CustomObject>
    <label>Episode Team</label>
    <nameField>
        <displayFormat>ET-{000000}</displayFormat>
        <label>Episode Team Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Episode Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>