unpackaged/main/default/objects/Episode_Team__c/fields/Consultant__c.field-meta.xml
<CustomField>
    <fullName>Consultant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consultant</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Involved_Parties3</relationshipName>
    <type>Lookup</type>
</CustomField>