unpackaged/main/default/objects/Episode_Team__c/fields/Episode__c.field-meta.xml
<CustomField>
    <fullName>Episode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Episode</label>
    <referenceTo>ClinicalEncounter</referenceTo>
    <relationshipName>Involved_Parties</relationshipName>
    <type>Lookup</type>
</CustomField>