unpackaged/main/default/objects/Episode_Team__c/fields/Key_Worker__c.field-meta.xml
<CustomField>
    <fullName>Key_Worker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Key Worker</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Involved_Parties</relationshipName>
    <type>Lookup</type>
</CustomField>