unpackaged/main/default/objects/Episode_Team__c/fields/Treating_Doctor__c.field-meta.xml
<CustomField>
    <fullName>Treating_Doctor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Treating Doctor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Involved_Parties2</relationshipName>
    <type>Lookup</type>
</CustomField>